@@ -1,7 +1,6 @@
 package fr.nocsy.mcpets.data;
 
 import fr.nocsy.mcpets.MCPets;
-import fr.nocsy.mcpets.modeler.bone.AbstractNameTag;
 import fr.nocsy.mcpets.PPermission;
 import fr.nocsy.mcpets.data.config.FormatArg;
 import fr.nocsy.mcpets.data.config.GlobalConfig;
@@ -9,7 +8,13 @@ import fr.nocsy.mcpets.data.config.Language;
 import fr.nocsy.mcpets.data.livingpets.PetLevel;
 import fr.nocsy.mcpets.data.livingpets.PetStats;
 import fr.nocsy.mcpets.data.sql.PlayerData;
-import fr.nocsy.mcpets.events.*;
+import fr.nocsy.mcpets.events.EntityMountPetEvent;
+import fr.nocsy.mcpets.events.PetCastSkillEvent;
+import fr.nocsy.mcpets.events.PetDespawnEvent;
+import fr.nocsy.mcpets.events.PetSpawnEvent;
+import fr.nocsy.mcpets.events.PetSpawnedEvent;
+import fr.nocsy.mcpets.events.PetTamingEvent;
+import fr.nocsy.mcpets.modeler.bone.AbstractNameTag;
 import fr.nocsy.mcpets.utils.PathFindingUtils;
 import fr.nocsy.mcpets.utils.Utils;
 import fr.nocsy.mcpets.utils.debug.Debugger;
@@ -35,7 +40,16 @@ import org.bukkit.metadata.FixedMetadataValue;
 import org.bukkit.scheduler.BukkitRunnable;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.NoSuchElementException;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
+import java.util.logging.Level;
 
 public class Pet {
 
@@ -208,7 +222,7 @@ public class Pet {
     /**
      * Constructor only used to create a fundamental Pet. If you wish to use a pet instance, please refer to copy()
      */
-    public Pet(String id) {
+    public Pet(final String id) {
         this.id = id;
         this.instance = this;
         this.checkPermission = true;
@@ -219,7 +233,7 @@ public class Pet {
     /**
      * Set the active skin of the pet and register it
      */
-    public void setActiveSkin(PetSkin skin) {
+    public void setActiveSkin(final PetSkin skin) {
         if (owner != null) {
             HashMap<String, PetSkin> ownerPetSkins = activeSkinsMap.get(owner);
             if (ownerPetSkins == null)
@@ -235,7 +249,7 @@ public class Pet {
      */
     public PetSkin getActiveSkin() {
         if (owner != null) {
-            HashMap<String, PetSkin> ownerPetSkins = activeSkinsMap.get(owner);
+            final HashMap<String, PetSkin> ownerPetSkins = activeSkinsMap.get(owner);
             if (ownerPetSkins != null) {
                 return ownerPetSkins.get(id);
             }
@@ -249,13 +263,13 @@ public class Pet {
     public boolean isMount() {
         Debugger.send("§6Checking if pet " + this.id + " is a mount...");
         // Find the category that contains this pet
-        for (Category cat : Category.getCategories()) {
+        for (final Category cat : Category.getCategories()) {
             Debugger.send("§7Checking category: " + cat.getId() + " (type: " + cat.getCategoryType() + ")");
             // Check if any pet in this category has the same ID as this pet
-            for (Pet pet : cat.getPets()) {
+            for (final Pet pet : cat.getPets()) {
                 if (pet.getId().equals(this.id)) {
-                    CategoryType type = cat.getCategoryType();
-                    boolean result = type == CategoryType.MOUNT;
+                    final CategoryType type = cat.getCategoryType();
+                    final boolean result = type == CategoryType.MOUNT;
                     Debugger.send("§aFound pet in category! Type: " + type + " -> isMount: " + result);
                     return result;
                 }
@@ -270,11 +284,11 @@ public class Pet {
      * Remove all signal sticks belonging to the given pet from the player's inventory.
      * Used on despawn to ensure the item does not persist in the player's hands.
      */
-    public static void clearStickSignals(Player p, String petId) {
+    public static void clearStickSignals(final Player p, final String petId) {
         if (p == null)
             return;
         for (int i = 0; i < p.getInventory().getSize(); i++) {
-            ItemStack item = p.getInventory().getItem(i);
+            final ItemStack item = p.getInventory().getItem(i);
             if (Items.isSignalStick(item)
                     && Pet.getFromSignalStick(item) != null
                     && Pet.getFromSignalStick(item).getId().equals(petId)) {
@@ -286,9 +300,9 @@ public class Pet {
     /**
      * Get the pet from a serialized toString version
      */
-    public static Pet fromString(String seria) {
+    public static Pet fromString(final String seria) {
         if (seria.startsWith("AlmPet;")) {
-            String id = seria.split(";")[1];
+            final String id = seria.split(";")[1];
             return getFromId(id);
         }
         return null;
@@ -297,8 +311,8 @@ public class Pet {
     /**
      * Get pet object from the id of the pet
      */
-    public static Pet getFromId(String id) {
-        for (Pet pet : objectPets) {
+    public static Pet getFromId(final String id) {
+        for (final Pet pet : objectPets) {
             if (pet.getId().equals(id)) {
                 return pet.copy();
             }
@@ -309,7 +323,7 @@ public class Pet {
     /**
      * Get the pet from the ItemStack icon
      */
-    public static Pet getFromIcon(ItemStack icon) {
+    public static Pet getFromIcon(final ItemStack icon) {
         if (icon.hasItemMeta() && icon.getItemMeta().hasItemName()) {
             return fromString(icon.getItemMeta().getItemName());
         }
@@ -319,46 +333,47 @@ public class Pet {
     /**
      * Get the pet from the specified entity
      */
-    public static Pet getFromEntity(Entity ent) {
+    public static Pet getFromEntity(final Entity ent) {
         if (ent != null &&
                 ent.hasMetadata("AlmPet") &&
-                ent.getMetadata("AlmPet").size() > 0 &&
-                ent.getMetadata("AlmPet").get(0) != null &&
-                ent.getMetadata("AlmPet").get(0).value() != null) {
-            return (Pet) ent.getMetadata("AlmPet").get(0).value();
+                !ent.getMetadata("AlmPet").isEmpty() &&
+                ent.getMetadata("AlmPet").getFirst() != null &&
+                ent.getMetadata("AlmPet").getFirst().value() != null) {
+            return (Pet) ent.getMetadata("AlmPet").getFirst().value();
         }
         return null;
     }
 
     /**
      * Get the pet of the specified owner if it exists
+     *
      * @deprecated Use getActivePetsForOwner() instead. Returns first pet only for backward compatibility.
      */
     @Deprecated
-    public static Pet fromOwner(UUID owner) {
-        List<Pet> pets = Pet.getActivePets().get(owner);
-        return (pets != null && !pets.isEmpty()) ? pets.get(0) : null;
+    public static Pet fromOwner(final UUID owner) {
+        final List<Pet> pets = Pet.getActivePets().get(owner);
+        return (pets != null && !pets.isEmpty()) ? pets.getFirst() : null;
     }
 
     /**
      * Get all active pets for a player
      */
-    public static List<Pet> getActivePetsForOwner(UUID owner) {
+    public static List<Pet> getActivePetsForOwner(final UUID owner) {
         return Pet.getActivePets().getOrDefault(owner, new ArrayList<>());
     }
 
     /**
      * Add a pet to a player's active pets list
      */
-    public static void addActivePet(UUID owner, Pet pet) {
+    public static void addActivePet(final UUID owner, final Pet pet) {
         activePets.computeIfAbsent(owner, k -> new ArrayList<>()).add(pet);
     }
 
     /**
      * Remove a pet from a player's active pets list
      */
-    public static void removeActivePet(UUID owner, Pet pet) {
-        List<Pet> pets = activePets.get(owner);
+    public static void removeActivePet(final UUID owner, final Pet pet) {
+        final List<Pet> pets = activePets.get(owner);
         if (pets != null) {
             pets.remove(pet);
             if (pets.isEmpty()) {
@@ -370,13 +385,13 @@ public class Pet {
     /**
      * Get the pet from the last one that the player interacted with
      */
-    public static Pet getFromLastInteractedWith(Player p) {
+    public static Pet getFromLastInteractedWith(final Player p) {
         if (p != null &&
                 p.hasMetadata("AlmPetInteracted") &&
-                p.getMetadata("AlmPetInteracted").size() > 0 &&
-                p.getMetadata("AlmPetInteracted").get(0) != null &&
-                p.getMetadata("AlmPetInteracted").get(0).value() != null) {
-            return (Pet) p.getMetadata("AlmPetInteracted").get(0).value();
+                !p.getMetadata("AlmPetInteracted").isEmpty() &&
+                p.getMetadata("AlmPetInteracted").getFirst() != null &&
+                p.getMetadata("AlmPetInteracted").getFirst().value() != null) {
+            return (Pet) p.getMetadata("AlmPetInteracted").getFirst().value();
         }
         return null;
     }
@@ -384,13 +399,13 @@ public class Pet {
     /**
      * Get the pet from the last one that the player interacted with
      */
-    public static Pet getFromLastOpInteractedWith(Player p) {
+    public static Pet getFromLastOpInteractedWith(final Player p) {
         if (p != null && p.hasPermission(PPermission.ADMIN.getPermission()) &&
                 p.hasMetadata("AlmPetOp") &&
-                p.getMetadata("AlmPetOp").size() > 0 &&
-                p.getMetadata("AlmPetOp").get(0) != null &&
-                p.getMetadata("AlmPetOp").get(0).value() != null) {
-            return (Pet) p.getMetadata("AlmPetOp").get(0).value();
+                !p.getMetadata("AlmPetOp").isEmpty() &&
+                p.getMetadata("AlmPetOp").getFirst() != null &&
+                p.getMetadata("AlmPetOp").getFirst().value() != null) {
+            return (Pet) p.getMetadata("AlmPetOp").getFirst().value();
         }
         return null;
     }
@@ -398,14 +413,14 @@ public class Pet {
     /**
      * Associate the said player to the pet as last interacted with
      */
-    public void setLastInteractedWith(Player p) {
+    public void setLastInteractedWith(final Player p) {
         p.setMetadata("AlmPetInteracted", new FixedMetadataValue(MCPets.getInstance(), this));
     }
 
     /**
      * Associate the said op player to the pet as last interacted with
      */
-    public void setLastOpInteracted(Player p) {
+    public void setLastOpInteracted(final Player p) {
         if (p.hasPermission(PPermission.ADMIN.getPermission()))
             p.setMetadata("AlmPetOp", new FixedMetadataValue(MCPets.getInstance(), this));
     }
@@ -414,8 +429,8 @@ public class Pet {
      * Return the pet from the signal stick item
      * null if none is found matching the id
      */
-    public static Pet getFromSignalStick(ItemStack signalStick) {
-        String petId = Items.getPetTag(signalStick);
+    public static Pet getFromSignalStick(final ItemStack signalStick) {
+        final String petId = Items.getPetTag(signalStick);
         if (petId != null)
             return Pet.getFromId(petId);
         return null;
@@ -424,20 +439,19 @@ public class Pet {
     /**
      * List of pets available for the specified player (using permissions)
      */
-    public static List<Pet> getAvailablePets(Player p) {
-        ArrayList<Pet> pets = new ArrayList<>();
+    public static List<Pet> getAvailablePets(final Player p) {
+        final ArrayList<Pet> pets = new ArrayList<>();
 
-        for (Pet pet : objectPets) {
+        for (final Pet pet : objectPets) {
             if (pet.isCheckPermission()) {
                 if (p.hasPermission(pet.getPermission())) {
-                    Pet updatedPet = pet.copy();
+                    final Pet updatedPet = pet.copy();
                     updatedPet.setOwner(p.getUniqueId());
                     updatedPet.setPetStats();
 
                     pets.add(updatedPet);
                 }
-            }
-            else {
+            } else {
                 pets.add(pet);
             }
         }
@@ -448,11 +462,11 @@ public class Pet {
      * Clear the list of pets
      */
     public static void clearPets() {
-        List<Pet> allPets = new ArrayList<>();
-        for (List<Pet> petList : Pet.getActivePets().values()) {
+        final List<Pet> allPets = new ArrayList<>();
+        for (final List<Pet> petList : Pet.getActivePets().values()) {
             allPets.addAll(petList);
         }
-        for (Pet pet : allPets) {
+        for (final Pet pet : allPets) {
             pet.despawn(PetDespawnReason.RELOAD);
         }
     }
@@ -461,7 +475,7 @@ public class Pet {
      * Do not use this function except if you're just spawning a pet
      * Set the value of the taming progress default value
      */
-    public void setDefaultTamingValue(double value) {
+    public void setDefaultTamingValue(final double value) {
         tamingProgress = Math.min(1, Math.max(value, 0));
     }
 
@@ -471,7 +485,7 @@ public class Pet {
     public void setTamingProgress(double value) {
         value = Math.min(1, Math.max(value, 0));
 
-        PetTamingEvent event = new PetTamingEvent(this, value);
+        final PetTamingEvent event = new PetTamingEvent(this, value);
         Utils.callEvent(event);
 
         if (!event.isCancelled()) {
@@ -497,29 +511,30 @@ public class Pet {
                         petStats.setHealth(petStats.getCurrentLevel().getMaxHealth());
                     }
                 }.runTaskLater(MCPets.getInstance(), 2L);
-                Skill tamingOverSkillMM = Utils.getSkill(tamingOverSkill);
+                final Skill tamingOverSkillMM = Utils.getSkill(tamingOverSkill);
                 if (tamingOverSkillMM != null) {
                     try {
                         tamingOverSkillMM.execute(new SkillMetadataImpl(SkillTriggers.CUSTOM, activeMob, activeMob.getEntity()));
-                    } catch (Exception ignored) {}
+                    } catch (final Exception ignored) {
+                    }
                 }
-            }
-            else {
-                Skill tamingProgressSkillMM = Utils.getSkill(tamingProgressSkill);
+            } else {
+                final Skill tamingProgressSkillMM = Utils.getSkill(tamingProgressSkill);
                 if (tamingProgressSkillMM != null) {
                     try {
                         tamingProgressSkillMM.execute(new SkillMetadataImpl(SkillTriggers.CUSTOM, activeMob, activeMob.getEntity()));
-                    } catch (Exception ignored) {}
+                    } catch (final Exception ignored) {
+                    }
                 }
             }
         }
     }
 
-    public long getFoodEatenTimestamp(String petFoodId) {
+    public long getFoodEatenTimestamp(final String petFoodId) {
         return petFoodEatenTimestamps.getOrDefault(petFoodId, 0L);
     }
 
-    public void applyFoodCooldown(String petFoodId) {
+    public void applyFoodCooldown(final String petFoodId) {
         petFoodEatenTimestamps.put(petFoodId, System.currentTimeMillis());
     }
 
@@ -536,7 +551,7 @@ public class Pet {
         // If it already has registered pet stats, then we just read them from the loaded ones
         // Else we create default pet stats that will server as the base
         petStats = Optional.ofNullable(PetStats.get(id, owner)).orElseGet(() -> {
-            PetStats start = new PetStats(this, 0, petLevels.get(0).getMaxHealth(), petLevels.get(0));
+            final PetStats start = new PetStats(this, 0, petLevels.getFirst().getMaxHealth(), petLevels.getFirst());
             // We register the pet stats if we have new ones created
             PetStats.register(start);
             return start;
@@ -546,7 +561,7 @@ public class Pet {
     /**
      * Spawn the pet if possible. Return values are indicated in this class.
      */
-    public int spawn(Location loc, boolean bruise) {
+    public int spawn(final Location loc, final boolean bruise) {
         Debugger.send("§aSpawning pet " + id + "...");
         // if the pet has no pet stats, then we try to set one
         if (petStats == null) {
@@ -554,7 +569,7 @@ public class Pet {
         }
 
         // Trigger the PetSpawnEvent
-        PetSpawnEvent event = new PetSpawnEvent(this, loc);
+        final PetSpawnEvent event = new PetSpawnEvent(this, loc);
         Utils.callEvent(event);
 
         // Set the pet to follow the owner by default
@@ -578,8 +593,7 @@ public class Pet {
                 Language.LOOP_SPAWN.sendMessage(Bukkit.getPlayer(owner));
             Debugger.send("§cPet was despawned coz it was stuck in a spawn loop.");
             return BLOCKED;
-        }
-        else {
+        } else {
             recurrent_spawn = true;
             // LOOP SPAWN issue
             new BukkitRunnable() {
@@ -610,12 +624,12 @@ public class Pet {
                 Debugger.send("§cPet spawn already in progress for: " + this.id);
                 return BLOCKED;
             }
-            
-            List<Pet> activePets = Pet.getActivePetsForOwner(owner);
-            for (Pet activePet : activePets) {
+
+            final List<Pet> activePets = Pet.getActivePetsForOwner(owner);
+            for (final Pet activePet : activePets) {
                 // Skip if it's the same instance (same object reference)
                 if (activePet == this) continue;
-                
+
                 if (activePet.getId().equals(this.id)) {
                     Debugger.send("§cPlayer already has this pet active: " + this.id);
                     // Don't spawn, just return blocked
@@ -629,75 +643,72 @@ public class Pet {
         try {
             // Max limit check is now done in changeActiveMobTo() after the pet is added to active list
             // This prevents race conditions when alternating between mounts and pets
-    
+
             // Get the active skin (which is also a MythicMobs)
             // Adapt the mythicMob to despawn depending on the skin
             if (getActiveSkin() != null)
                 mythicMobName = getActiveSkin().getMythicMobId();
-    
+
             // Any issue with the mythicmobs definition ?
             // Any issue with the owner definition ?
             if (mythicMobName == null) {
                 Debugger.send("§cMythicMob name is null, check out your pet config.");
                 return MYTHIC_MOB_NULL;
-            }
-            else if (owner == null) {
+            } else if (owner == null) {
                 Debugger.send("§cOwner was not found.");
                 return OWNER_NULL;
             }
-    
+
             if (MCPets.getMythicMobs().getMobManager().getMythicMob(mythicMobName).isEmpty()) {
                 Debugger.send("§cThe MythicMob §6" + mythicMobName + "§c doesn't exist in MythicMobs. §7Check your pet config to make sure the MythicMob you chose actually exists.");
                 return MYTHIC_MOB_NULL;
             }
-    
+
             try {
                 // Initialize the entity
-                Entity ent;
+                final Entity ent;
                 try {
                     // Spawn the mythicMobs
                     // if it's autoride then we spawn it at the player's location so he can climb on it directly
                     // Otherwise we spawn the pet around according to the noise
                     if (autoRide) {
                         ent = MCPets.getMythicMobs().getAPIHelper().spawnMythicMob(mythicMobName, loc);
-                    }
-                    else {
+                    } else {
                         Location spawnLoc = loc;
                         if (bruise)
                             spawnLoc = Utils.bruised(loc, getSpawnRange());
                         ent = MCPets.getMythicMobs().getAPIHelper().spawnMythicMob(mythicMobName, spawnLoc);
                     }
-                }
-                catch (NullPointerException | NoSuchElementException ex) {
+                } catch (final NullPointerException | NoSuchElementException ex) {
                     // if there's been a problem, trigger a despawn
                     Debugger.send("§cMythicMob " + mythicMobName + " was not found.");
                     despawn(PetDespawnReason.SPAWN_ISSUE);
                     return MYTHIC_MOB_NULL;
                 }
-    
+
                 // If the pet is not here, trigger a despawn
                 if (ent == null) {
                     Debugger.send("§cMythicMob was found but the entity was not able to spawn.");
                     despawn(PetDespawnReason.SPAWN_ISSUE);
                     return MYTHIC_MOB_NULL;
                 }
-    
+
                 // We try to fetch the mob within the MythicMobs registry
-                Optional<ActiveMob> maybeHere = MCPets.getMythicMobs().getMobManager().getActiveMob(ent.getUniqueId());
+                final Optional<ActiveMob> maybeHere = MCPets.getMythicMobs().getMobManager().getActiveMob(ent.getUniqueId());
                 maybeHere.ifPresent(this::setActiveMob);
-    
+
                 // Sometimes it can happen that the mob isn't registered, so we try to register it manually
                 if (activeMob == null) {
                     Debugger.send("§6Warn: §7MythicMobs didn't have the mob in the registry, let's try to register it manually.");
-                    ActiveMob mob = MCPets.getMythicMobs().getMobManager().registerActiveMob(
+                    final ActiveMob mob = MCPets.getMythicMobs().getMobManager().registerActiveMob(
                             BukkitAdapter.adapt(ent),
                             MCPets.getMythicMobs().getMobManager().getMythicMob(mythicMobName).get(),
                             0
-                        );
+                    );
                     if (mob != null)
                         setActiveMob(mob);
                 }
-    
+
                 // If any weird thing happened and the activeMob couldn't be registered, then we cancel everything
                 if (activeMob == null) {
                     Debugger.send("§cMythicMob was spawned but MCPets couldn't link it to an active mob. Trying again in 0.5s automatically...");
@@ -711,9 +722,9 @@ public class Pet {
                     }.runTaskLater(MCPets.getInstance(), 10L);
                     return MYTHIC_MOB_NULL;
                 }
-    
-                boolean returnDespawned = changeActiveMobTo(activeMob, owner, true, PetDespawnReason.REPLACED);
-    
+
+                final boolean returnDespawned = changeActiveMobTo(activeMob, owner, true, PetDespawnReason.REPLACED);
+
                 // Handles the first spawn situation
                 if (firstSpawn) {
                     // It won't be a first spawn anymore
@@ -722,29 +733,28 @@ public class Pet {
                     new BukkitRunnable() {
                         @Override
                         public void run() {
-                            Player p = Bukkit.getPlayer(owner);
+                            final Player p = Bukkit.getPlayer(owner);
                             if (p != null && autoRide) {
-                                boolean mounted = setMount(p);
+                                final boolean mounted = setMount(p);
                                 if (!mounted)
                                     Language.NOT_MOUNTABLE.sendMessage(p);
                             }
                         }
                     }.runTaskLater(MCPets.getInstance(), 5L);
                 }
-    
+
                 // Call the spawned event
-                PetSpawnedEvent petSpawnedEvent = new PetSpawnedEvent(this);
+                final PetSpawnedEvent petSpawnedEvent = new PetSpawnedEvent(this);
                 Utils.callEvent(petSpawnedEvent);
-    
+
                 // Either we despawned a previous pet or not
                 if (returnDespawned) {
                     Debugger.send("§aSpawn successfuly happened. Previous pet is going to be despawned.");
                     return DESPAWNED_PREVIOUS;
                 }
                 return MOB_SPAWN;
-    
-            }
-            catch (InvalidMobTypeException e) {
+
+            } catch (final InvalidMobTypeException e) {
                 // If there's a mob bug, despawn the current pet
                 Debugger.send("§cImpossible to spawn the pet: MythicMob was not found.");
                 despawn(PetDespawnReason.SPAWN_ISSUE);
@@ -760,8 +770,8 @@ public class Pet {
     /**
      * Spawn the pet and send the corresponding message on execution
      */
-    public void spawnWithMessage(Player p) {
-        int executed = this.spawn(p, p.getLocation());
+    public void spawnWithMessage(final Player p) {
+        final int executed = this.spawn(p, p.getLocation());
         if (isStillHere())
             switch (executed) {
                 case Pet.DESPAWNED_PREVIOUS:
@@ -783,8 +793,8 @@ public class Pet {
                     Language.OWNER_NOT_FOUND.sendMessage(p);
                     break;
                 case Pet.MAX_ACTIVE_PETS_REACHED:
-                    Language.MAX_ACTIVE_PETS_REACHED.sendMessageFormated(p, 
-                        new FormatArg("%max%", String.valueOf(GlobalConfig.getInstance().getMaxActivePets())));
+                    Language.MAX_ACTIVE_PETS_REACHED.sendMessageFormated(p,
+                            new FormatArg("%max%", String.valueOf(GlobalConfig.getInstance().getMaxActivePets())));
                     break;
             }
     }
@@ -793,7 +803,7 @@ public class Pet {
      * Set the pet's instance active mob to the given new ActiveMob
      * Returns the value if the mob has revoked a previous one
      */
-    public boolean changeActiveMobTo(ActiveMob mob, UUID owner, boolean followOwner, PetDespawnReason reason) {
+    public boolean changeActiveMobTo(final ActiveMob mob, final UUID owner, final boolean followOwner, final PetDespawnReason reason) {
         boolean replaced = false;
         // No longer auto-despawn previous pets - allow multiple pets
         // The max limit check in spawn() will handle this
@@ -817,35 +827,35 @@ public class Pet {
         Debugger.send("§b[LIMIT CHECK] Pet " + this.id + " added to active list for owner " + owner);
 
         if (GlobalConfig.getInstance().isSpawnPetAfterServerRestart()) {
-            PlayerData pd = PlayerData.get(owner);
+            final PlayerData pd = PlayerData.get(owner);
             pd.setLastActivePet(this.getId());
             pd.save();
         }
 
         // Check max active pets/mounts limit AFTER adding this pet to the list
         // This ensures accurate counting and prevents race conditions
-        boolean isMount = this.isMount();
+        final boolean isMount = this.isMount();
         Debugger.send("§b[LIMIT CHECK] Pet " + this.id + " isMount: " + isMount);
-        
-        int maxAllowed = isMount ? 
-            GlobalConfig.getInstance().getMaxActiveMounts() : 
-            GlobalConfig.getInstance().getMaxActivePets();
+
+        final int maxAllowed = isMount ?
+                GlobalConfig.getInstance().getMaxActiveMounts() :
+                GlobalConfig.getInstance().getMaxActivePets();
         Debugger.send("§b[LIMIT CHECK] Max allowed for " + (isMount ? "mounts" : "pets") + ": " + maxAllowed);
-        
+
         if (maxAllowed > 0) {
             // Get all active pets/mounts of the same type for this owner
             // Get all active pets/mounts of the same type for this owner
-            List<Pet> sameLevelTypePets = Pet.getActivePetsForOwner(owner).stream()
+            final List<Pet> sameLevelTypePets = Pet.getActivePetsForOwner(owner).stream()
                     .filter(p -> p.isMount() == isMount)  // Filter by same type
                     .collect(java.util.stream.Collectors.toCollection(ArrayList::new));
-            
+
             long currentCount = sameLevelTypePets.size();
             Debugger.send("§b[LIMIT CHECK] Current count of " + (isMount ? "mounts" : "pets") + ": " + currentCount);
             Debugger.send("§b[LIMIT CHECK] List of same type pets: " + sameLevelTypePets.stream().map(Pet::getId).collect(java.util.stream.Collectors.joining(", ")));
-            
+
             // If we// If we exceeded the limit, despawn oldest ones (that are not this one) until back under the limit
             if (currentCount > maxAllowed) {
-                String type = isMount ? "mount" : "pet";
+                final String type = isMount ? "mount" : "pet";
                 Debugger.send("§eMax " + type + " limit exceeded (" + currentCount + "/" + maxAllowed + "), despawning oldest...");
 
                 // Continue despawning until the count no longer exceeds the limit
@@ -853,7 +863,7 @@ public class Pet {
                     Pet petToDespawn = null;
 
                     // Find the oldest pet/mount (not this one)
-                    for (Pet pet : sameLevelTypePets) {
+                    for (final Pet pet : sameLevelTypePets) {
                         if (pet != this) {
                             petToDespawn = pet;
                             break;
@@ -880,15 +890,14 @@ public class Pet {
         }
 
         // Load the player data for the pet
-        PlayerData pd = PlayerData.get(owner);
+        final PlayerData pd = PlayerData.get(owner);
         // Fetch the saved name
-        String name = pd.getMapOfRegisteredNames().get(this.id);
+        final String name = pd.getMapOfRegisteredNames().get(this.id);
 
         // Set the display name of the pet
         if (name != null) {
             setDisplayName(name, false);
-        }
-        else {
+        } else {
             setDisplayName(Language.TAG_TO_REMOVE_NAME.getMessage(), false);
         }
 
@@ -906,7 +915,7 @@ public class Pet {
      * This will not synchronize with the pet's owner, so be extra careful with using this method
      * You'd rather use "changeActiveMobTo" instead
      */
-    public void setActiveMob(ActiveMob mob) {
+    public void setActiveMob(final ActiveMob mob) {
         if (mob == null) {
             Debugger.send("§cCould not set the active pet to the new one: mob instance is null");
             despawn(PetDespawnReason.CHANGING_TO_NULL_ACTIVEMOB);
@@ -915,7 +924,7 @@ public class Pet {
         // Then we set the active mob to the new active mob
         // And we setup the default pet parameters
         activeMob = mob;
-        Entity ent = mob.getEntity().getBukkitEntity();
+        final Entity ent = mob.getEntity().getBukkitEntity();
 
         // Put the Metadata on the pet that characterizes it so we can identify it later
         ent.setMetadata("AlmPet", new FixedMetadataValue(MCPets.getInstance(), this));
@@ -946,7 +955,7 @@ public class Pet {
             @Override
             public void run() {
 
-                Player p = Bukkit.getPlayer(owner);
+                final Player p = Bukkit.getPlayer(owner);
                 if (p == null) {
                     getInstance().despawn(PetDespawnReason.OWNER_NOT_HERE);
                     stopAI();
@@ -963,7 +972,7 @@ public class Pet {
                     return;
                 }
 
-                String permission = getInstance().getPermission();
+                final String permission = getInstance().getPermission();
                 if (getInstance().isCheckPermission() && (permission == null || !p.hasPermission(permission))) {
                     Debugger.send("§6[AiManager] : §cPet " + getId() + " despawned because the owner doesn't have permission");
                     getInstance().despawn(PetDespawnReason.DONT_HAVE_PERM);
@@ -972,8 +981,8 @@ public class Pet {
                 }
 
                 final Location petLocation = p.getLocation();
-                Location ownerLoc = petLocation;
-                Location petLoc = getInstance().getActiveMob().getEntity().getBukkitEntity().getLocation();
+                final Location ownerLoc = petLocation;
+                final Location petLoc = getInstance().getActiveMob().getEntity().getBukkitEntity().getLocation();
 
                 // If the owner is not in the same world as the pet and that the pet is fully tamed, we move it
                 // to the owner
@@ -983,24 +992,22 @@ public class Pet {
                     return;
                 }
 
-                double distance = Utils.distance(ownerLoc, petLoc);
+                final double distance = Utils.distance(ownerLoc, petLoc);
 
                 // Following AI System
                 if (distance < getInstance().getComingBackRange()) {
                     // If the pet is too close then it stops
                     PathFindingUtils.stop(activeMob.getEntity(), owner);
-                }
-                else if (distance > getInstance().getDistance() &&
+                } else if (distance > getInstance().getDistance() &&
                         (distance < GlobalConfig.getInstance().getDistanceTeleport() || tamingProgress < 1)) {
                     // If the pet is too far but not far enough to be teleported, then it follows up the owner
                     // Except if the following is disabled
                     // * Note : if the taming is not completed then the pet can not be teleported to the owner
                     if (!followOwner)
                         return;
-                    AbstractLocation aloc = new AbstractLocation(activeMob.getEntity().getWorld(), petLocation.getX(), petLocation.getY(), petLocation.getZ());
+                    final AbstractLocation aloc = new AbstractLocation(activeMob.getEntity().getWorld(), petLocation.getX(), petLocation.getY(), petLocation.getZ());
                     PathFindingUtils.moveTo(activeMob.getEntity(), aloc);
-                }
-                else if (distance > GlobalConfig.getInstance().getDistanceTeleport()
+                } else if (distance > GlobalConfig.getInstance().getDistanceTeleport()
                         && !p.isFlying() && !p.isGliding()
                         && p.isOnGround()
                         && teleportTick == 0) {
@@ -1022,7 +1029,7 @@ public class Pet {
     /**
      * Spawn the pet at specified location and attributing player as the owner of the pet
      */
-    public int spawn(@NotNull Player owner, Location loc) {
+    public int spawn(@NotNull final Player owner, final Location loc) {
         this.owner = owner.getUniqueId();
         setLastInteractedWith(owner);
         return spawn(loc, true);
@@ -1031,9 +1038,9 @@ public class Pet {
     /**
      * Despawn the pet
      */
-    public boolean despawn(PetDespawnReason reason) {
+    public boolean despawn(final PetDespawnReason reason) {
 
-        PetDespawnEvent event = new PetDespawnEvent(this, reason);
+        final PetDespawnEvent event = new PetDespawnEvent(this, reason);
         Utils.callEvent(event);
 
         Debugger.send("§6Pet §7" + id + "§6 has §cdespawned§6. Reason: §a" + reason.getReason());
@@ -1041,13 +1048,13 @@ public class Pet {
         stopAI();
         removed = true;
         if (owner != null) {
-            Player ownerPlayer = Bukkit.getPlayer(owner);
+            final Player ownerPlayer = Bukkit.getPlayer(owner);
             if (ownerPlayer != null) {
                 if (reason.equals(PetDespawnReason.UNKNOWN) ||
                         reason.equals(PetDespawnReason.SPAWN_ISSUE)) {
                     Language.REVOKED_UNKNOWN.sendMessage(ownerPlayer);
                 }
-                if(enableSignalStickFromMenu)
+                if (enableSignalStickFromMenu)
                     clearStickSignals(ownerPlayer, this.id);
             }
         }
@@ -1059,21 +1066,19 @@ public class Pet {
             // If it's not a death, we don't let the death animation happen
             if (reason != PetDespawnReason.DEATH) {
                 // Do we have a despawn skill to trigger or a skin swap?
-                Skill despawnSkillMM = Utils.getSkill(despawnSkill);
+                final Skill despawnSkillMM = Utils.getSkill(despawnSkill);
                 if (despawnSkillMM != null
                         && reason != PetDespawnReason.SKIN) {
                     try {
                         despawnSkillMM.execute(new SkillMetadataImpl(SkillTriggers.CUSTOM, activeMob, activeMob.getEntity()));
-                    }
-                    catch (Exception ex) {
+                    } catch (final Exception ex) {
                         if (activeMob.getEntity() != null && activeMob.getEntity().getBukkitEntity() != null) {
                             activeMob.getEntity().getBukkitEntity().remove();
                             activeMob.despawn();
                             activeMob.remove();
                         }
                     }
-                }
-                else {
+                } else {
                     MCPets.getModeler().removeModel(activeMob.getEntity().getUniqueId());
                     activeMob.despawn();
                     activeMob.remove();
@@ -1088,7 +1093,7 @@ public class Pet {
             Debugger.send("§b[DESPAWN] Removed pet " + id + " from active list");
             if (GlobalConfig.getInstance().isSpawnPetAfterServerRestart()) {
                 if (reason == PetDespawnReason.REVOKE || reason == PetDespawnReason.DISMOUNT || reason == PetDespawnReason.UNKNOWN) {
-                    PlayerData pd = PlayerData.get(owner);
+                    final PlayerData pd = PlayerData.get(owner);
                     pd.setLastActivePet("");
                     pd.save();
                 }
@@ -1101,7 +1106,7 @@ public class Pet {
         Debugger.send("§b[DESPAWN] Removed pet " + id + " from active list (no active mob)");
         if (GlobalConfig.getInstance().isSpawnPetAfterServerRestart()) {
             if (reason == PetDespawnReason.REVOKE || reason == PetDespawnReason.DISMOUNT || reason == PetDespawnReason.UNKNOWN) {
-                PlayerData pd = PlayerData.get(owner);
+                final PlayerData pd = PlayerData.get(owner);
                 pd.setLastActivePet("");
                 pd.save();
             }
@@ -1112,7 +1117,7 @@ public class Pet {
     /**
      * Teleport the pet to the specific location
      */
-    public void teleport(Location loc) {
+    public void teleport(final Location loc) {
         if (isStillHere()) {
             this.activeMob.remove();
             this.despawn(PetDespawnReason.TELEPORT);
@@ -1123,8 +1128,8 @@ public class Pet {
     /**
      * Teleport the pet to the player
      */
-    public void teleportToPlayer(Player p) {
-        Location loc = Utils.bruised(p.getLocation(), Math.min(getSpawnRange(), getDistance()));
+    public void teleportToPlayer(final Player p) {
+        final Location loc = Utils.bruised(p.getLocation(), Math.min(getSpawnRange(), getDistance()));
         Debugger.send("§7teleporting pet " + id + " to player " + p.getName());
         if (isStillHere())
             this.teleport(loc);
@@ -1145,14 +1150,14 @@ public class Pet {
     /**
      * Does the player have the access to the given pet ?
      */
-    public boolean has(Player p) {
+    public boolean has(final Player p) {
         return Utils.hasPermission(p.getUniqueId(), this.getPermission());
     }
 
     /**
      * Set the display name of the pet
      */
-    public void setDisplayName(String name, boolean save) {
+    public void setDisplayName(String name, final boolean save) {
 
         boolean isDefaultName = false;
         if (name == null)
@@ -1164,25 +1169,24 @@ public class Pet {
                 name = activeMob.getDisplayName();
             else
                 name = GlobalConfig.getInstance().getDefaultName()
-                        .replace("%player%", Bukkit.getOfflinePlayer(owner).getName())
+                        .replace("%player%", Optional.ofNullable(Bukkit.getOfflinePlayer(owner).getName()).orElse("Unknown"))
                         .replace("%pet_id%", id)
                         .replace("%pet_name%", icon.getItemMeta().getDisplayName());
         }
-
 
         try {
             if (name != null && ChatColor.stripColor(name).length() > GlobalConfig.instance.getMaxNameLength()) {
                 setDisplayName(name.substring(0, GlobalConfig.instance.getMaxNameLength()), save);
                 return;
             }
-            if(name != null)
+            if (name != null)
                 name = name.replace("'", " ");
 
             currentName = name;
             if (isStillHere()) {
                 if (currentName == null || currentName.equalsIgnoreCase(Language.TAG_TO_REMOVE_NAME.getMessage())) {
                     activeMob.getEntity().getBukkitEntity().setCustomName(GlobalConfig.getInstance().getDefaultName()
-                            .replace("%player%", Bukkit.getOfflinePlayer(owner).getName())
+                            .replace("%player%", Optional.ofNullable(Bukkit.getOfflinePlayer(owner).getName()).orElse("Unknown"))
                             .replace("%pet_id%", id)
                             .replace("%pet_name%", icon.getItemMeta().getDisplayName()));
 
@@ -1195,7 +1199,7 @@ public class Pet {
                     }.runTaskLater(MCPets.getInstance(), 10L);
 
                     if (save) {
-                        PlayerData pd = PlayerData.get(owner);
+                        final PlayerData pd = PlayerData.get(owner);
                         pd.getMapOfRegisteredNames().remove(getId());
                         pd.save();
                     }
@@ -1214,18 +1218,17 @@ public class Pet {
 
                 Debugger.send("§7Applying name " + name + " to pet " + id);
                 if (save) {
-                    String savedName = currentName + "";
+                    String savedName = currentName;
                     if (isDefaultName)
                         savedName = Language.TAG_TO_REMOVE_NAME.getMessage();
-                    PlayerData pd = PlayerData.get(owner);
+                    final PlayerData pd = PlayerData.get(owner);
                     pd.getMapOfRegisteredNames().put(getId(), savedName);
                     pd.save();
                 }
             }
 
-        }
-        catch (Exception ex) {
-            MCPets.getLog().log(java.util.logging.Level.SEVERE, "[MCPets] : Exception raised while naming the pet | setDisplayName(" + Language.TAG_TO_REMOVE_NAME.getMessage() + ") for the pet " + this.id, ex);
+        } catch (final Exception ex) {
+            MCPets.getLog().log(Level.SEVERE, "Exception raised while naming the pet | setDisplayName(" + Language.TAG_TO_REMOVE_NAME.getMessage() + ") for the pet " + this.id, ex);
         }
     }
 
@@ -1233,7 +1236,7 @@ public class Pet {
      * Return a copy of the current pet. Used to implement a player pet in game
      */
     public Pet copy() {
-        Pet pet = new Pet(id);
+        final Pet pet = new Pet(id);
         pet.setPetStats(petStats);
         pet.setPetLevels(petLevels);
         pet.setMythicMobName(mythicMobName);
@@ -1263,12 +1266,12 @@ public class Pet {
     /**
      * Set the specified entity riding on the pet
      */
-    public boolean setMount(Entity ent) {
+    public boolean setMount(final Entity ent) {
         if (ent == null)
             return false;
 
-        EntityMountPetEvent event = new EntityMountPetEvent(ent, this);
-        EntityMountEvent vanillaMountEvent = new EntityMountEvent(ent, activeMob.getEntity().getBukkitEntity());
+        final EntityMountPetEvent event = new EntityMountPetEvent(ent, this);
+        final EntityMountEvent vanillaMountEvent = new EntityMountEvent(ent, activeMob.getEntity().getBukkitEntity());
         Utils.callEvent(vanillaMountEvent);
         Utils.callEvent(event);
 
@@ -1277,13 +1280,13 @@ public class Pet {
             return true;
 
         if (isStillHere()) {
-            UUID petUUID = activeMob.getEntity().getUniqueId();
+            final UUID petUUID = activeMob.getEntity().getUniqueId();
             try {
                 if (!MCPets.getModeler().mountDriver(petUUID, ent, mountType)) {
                     activeMob.getEntity().getBukkitEntity().addPassenger(ent);
                     return false;
                 }
-            } catch (IllegalStateException ex) {
+            } catch (final IllegalStateException ex) {
                 Language.ALREADY_MOUNTING.sendMessageFormated(ent);
             }
             return true;
@@ -1294,9 +1297,9 @@ public class Pet {
     /**
      * Say if the specified entity is riding on the pet
      */
-    public boolean hasMount(Entity ent) {
+    public boolean hasMount(final Entity ent) {
         if (isStillHere()) {
-            UUID petUUID = activeMob.getEntity().getUniqueId();
+            final UUID petUUID = activeMob.getEntity().getUniqueId();
             return MCPets.getModeler().hasMount(petUUID, ent);
         }
         return false;
@@ -1305,12 +1308,12 @@ public class Pet {
     /**
      * Unset the specified entity riding on the pet
      */
-    public void dismount(Entity ent) {
+    public void dismount(final Entity ent) {
         if (ent == null)
             return;
 
         if (isStillHere()) {
-            UUID localUUID = activeMob.getEntity().getUniqueId();
+            final UUID localUUID = activeMob.getEntity().getUniqueId();
             MCPets.getModeler().dismountRider(localUUID, ent);
         }
     }
@@ -1319,14 +1322,14 @@ public class Pet {
      * Set the name of the pet to the specified name
      * If the global config states we should use MM default naming, then it won't change the name, but you can turn off the visibility
      */
-    public void setNameTag(String name, boolean visible) {
+    public void setNameTag(String name, final boolean visible) {
         if (isStillHere()) {
             if (name != null) {
                 name = name.replace("'", " ");
                 Utils.hex(name);
             }
 
-            AbstractNameTag tag = getNameBone();
+            final AbstractNameTag tag = getNameBone();
             if (tag == null)
                 return;
             tag.setString(name);
@@ -1340,7 +1343,7 @@ public class Pet {
      */
     public AbstractNameTag getNameBone() {
         if (isStillHere()) {
-            UUID localUUID = activeMob.getEntity().getUniqueId();
+            final UUID localUUID = activeMob.getEntity().getUniqueId();
             return MCPets.getModeler().getNameTag(localUUID);
         }
         return null;
@@ -1350,7 +1353,7 @@ public class Pet {
      * Give a signal stick to the player linked to this pet.
      * Does nothing if the signal stick feature is disabled globally or per-pet configuration.
      */
-    public void giveStickSignals(Player p) {
+    public void giveStickSignals(final Player p) {
         if (getOwner() == null || getSignalStick() == null)
             return;
 
@@ -1370,18 +1373,18 @@ public class Pet {
     /**
      * Get the pet to cast a skill by sending it a signal
      */
-    public boolean sendSignal(String signal) {
+    public boolean sendSignal(final String signal) {
         if (signal == null || signal.isEmpty())
             return false;
 
-        PetCastSkillEvent event = new PetCastSkillEvent(this, signal);
+        final PetCastSkillEvent event = new PetCastSkillEvent(this, signal);
         Utils.callEvent(event);
 
         if (event.isCancelled())
             return false;
 
         if (this.isStillHere()) {
-            ActiveMob mob = this.getActiveMob();
+            final ActiveMob mob = this.getActiveMob();
             try {
                 String evolutionId = null;
                 if (petStats != null && petStats.getNextLevel() != null)
@@ -1389,20 +1392,19 @@ public class Pet {
 
                 if (evolutionId != null) {
                     // Iterate through all active pets
-                    for (List<Pet> petList : Pet.getActivePets().values()) {
-                        for (Pet pet : petList) {
-                             if (pet.getId().equals(evolutionId) && pet.getOwner() != null && pet.getOwner().equals(owner)) {
-                                 Language.PET_COULD_NOT_EVOLVE.sendMessage(Bukkit.getPlayer(owner));
-                                 return false;
-                             }
+                    for (final List<Pet> petList : Pet.getActivePets().values()) {
+                        for (final Pet pet : petList) {
+                            if (pet.getId().equals(evolutionId) && pet.getOwner() != null && pet.getOwner().equals(owner)) {
+                                Language.PET_COULD_NOT_EVOLVE.sendMessage(Bukkit.getPlayer(owner));
+                                return false;
+                            }
                         }
                     }
                 }
                 Debugger.send("§aSending signal §6" + signal + "§a to pet " + id);
                 mob.signalMob(mob.getEntity(), signal);
                 return true;
-            }
-            catch(Exception ex) {
+            } catch (final Exception ex) {
                 return false;
             }
         }
@@ -1413,43 +1415,41 @@ public class Pet {
      * Says whether or not the pet has skins
      */
     public boolean hasSkins() {
-        return PetSkin.getSkins(this) != null && PetSkin.getSkins(this).size() > 0;
+        return PetSkin.getSkins(this) != null && !PetSkin.getSkins(this).isEmpty();
     }
 
     /**
      * Setup the item with requirements
      * Show stats to make the item show the pet stats if it has some
      */
-    public ItemStack buildItem(ItemStack item, boolean showStats, String localizedName, String iconName, List<String> description, String materialType, int customModelData, String textureBase64) {
-        Material mat = materialType != null ? Material.getMaterial(materialType) : null;
+    public ItemStack buildItem(ItemStack item, final boolean showStats, final String localizedName, String iconName, final List<String> description, final String materialType, final int customModelData, final String textureBase64) {
+        final Material mat = materialType != null ? Material.getMaterial(materialType) : null;
         if (iconName == null)
             iconName = "§cUndefined";
         iconName = Utils.translateHexColorCodes("#", "", iconName);
         iconName = Utils.applyPlaceholders(owner, iconName);
-        ArrayList<String> desc = new ArrayList<>();
+        final ArrayList<String> desc = new ArrayList<>();
         if (description != null) {
-            for (String s : description) {
+            for (final String s : description) {
                 desc.add(Utils.applyPlaceholders(owner, Utils.translateHexColorCodes("#", "", s)));
             }
         }
         if (mat == null && textureBase64 != null) {
             item = Utils.createHead(iconName, desc, textureBase64);
-            ItemMeta meta = item.getItemMeta();
+            final ItemMeta meta = item.getItemMeta();
             meta.setItemName(localizedName);
             item.setItemMeta(meta);
-        }
-        else if (mat != null) {
+        } else if (mat != null) {
             item = new ItemStack(mat);
-            ItemMeta meta = item.getItemMeta();
+            final ItemMeta meta = item.getItemMeta();
             meta.setItemName(localizedName);
             meta.setCustomModelData(customModelData);
             meta.setDisplayName(iconName);
             meta.setLore(desc);
             item.setItemMeta(meta);
-        }
-        else if (item == null){
+        } else if (item == null) {
             item = Utils.createHead(iconName, desc, "eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvOWQ5Y2M1OGFkMjVhMWFiMTZkMzZiYjVkNmQ0OTNjOGY1ODk4YzJiZjMwMmI2NGUzMjU5MjFjNDFjMzU4NjcifX19");
-            ItemMeta meta = item.getItemMeta();
+            final ItemMeta meta = item.getItemMeta();
             meta.setItemName(localizedName);
             item.setItemMeta(meta);
         }
@@ -1460,12 +1460,12 @@ public class Pet {
         return item;
     }
 
-    public ItemStack applyStats(ItemStack item) {
+    public ItemStack applyStats(final ItemStack item) {
         // If we show the stats then we should not modify the actual item, but just its instance in that function
-        ItemStack it = item.clone();
+        final ItemStack it = item.clone();
         // Handles the statistics being showed on the icon
         if (petStats != null) {
-            ItemMeta meta = it.getItemMeta();
+            final ItemMeta meta = it.getItemMeta();
             // Recover the existing lores
             ArrayList<String> lores = (ArrayList<String>) meta.getLore();
             if (lores == null)
@@ -1474,18 +1474,17 @@ public class Pet {
             lores.add(" ");
 
             // Implement the progress bar
-            StringBuilder progressBar = new StringBuilder();
-            PetLevel nextLevel = petStats.getNextLevel();
+            final StringBuilder progressBar = new StringBuilder();
+            final PetLevel nextLevel = petStats.getNextLevel();
             if (nextLevel != null) {
                 if (nextLevel.equals(petStats.getCurrentLevel())) {
                     progressBar.append(Language.PET_STATS_MAX_LEVEL.getMessage());
-                }
-                else {
+                } else {
                     // Size of the progress bar in the hovering
-                    int progressBarSize = GlobalConfig.instance.getExperienceBarSize();
+                    final int progressBarSize = GlobalConfig.instance.getExperienceBarSize();
 
-                    double experienceRatio = (petStats.getExperience() - petStats.getCurrentLevel().getExpThreshold()) / (nextLevel.getExpThreshold() - petStats.getCurrentLevel().getExpThreshold());
-                    int indexProgress = Math.min(progressBarSize, (int) (experienceRatio * progressBarSize + 0.5));
+                    final double experienceRatio = (petStats.getExperience() - petStats.getCurrentLevel().getExpThreshold()) / (nextLevel.getExpThreshold() - petStats.getCurrentLevel().getExpThreshold());
+                    final int indexProgress = Math.min(progressBarSize, (int) (experienceRatio * progressBarSize + 0.5));
 
                     for (int i = 0; i < progressBarSize; i++) {
                         if (i < indexProgress)
@@ -1499,15 +1498,15 @@ public class Pet {
                     }
                 }
                 if (nextLevel.getEvolutionId() != null &&
-                        !nextLevel.canEvolve(owner,  Pet.getFromId(nextLevel.getEvolutionId()))) {
+                        !nextLevel.canEvolve(owner, Pet.getFromId(nextLevel.getEvolutionId()))) {
                     progressBar.append('\n').append(Language.PET_STATS_EVOLUTION_ALREADY_OWNED.getMessage());
                 }
             }
 
             // Get the positive or negative sign symbol of the bonus
-            String signSymbol_damageModifer = Utils.getSignSymbol(petStats.getDamageModifier() - 1);
-            String signSymbol_resistanceModifer = Utils.getSignSymbol(petStats.getResistanceModifier() - 1);
-            String signSymbol_power = Utils.getSignSymbol(petStats.getPower() - 1);
+            final String signSymbol_damageModifer = Utils.getSignSymbol(petStats.getDamageModifier() - 1);
+            final String signSymbol_resistanceModifer = Utils.getSignSymbol(petStats.getResistanceModifier() - 1);
+            final String signSymbol_power = Utils.getSignSymbol(petStats.getPower() - 1);
 
             String currentHealthStr = Integer.toString((int) petStats.getCurrentHealth());
             if (petStats.getCurrentHealth() == 0 &&
@@ -1519,12 +1518,11 @@ public class Pet {
             if (petStats.isRespawnTimerRunning()) {
                 status = Language.PET_STATUS_DEAD.getMessageFormatted(new FormatArg("%timeleft%",
                         Integer.toString((int) petStats.getRespawnTimer().getRemainingTime())));
-            }
-            else if (petStats.isRevokeTimerRunning())
+            } else if (petStats.isRevokeTimerRunning())
                 status = Language.PET_STATUS_REVOKED.getMessageFormatted(new FormatArg("%timeleft%",
                         Integer.toString((int) petStats.getRevokeTimer().getRemainingTime())));
 
-            String statsLore = Language.PET_STATS.getMessageFormatted(
+            final String statsLore = Language.PET_STATS.getMessageFormatted(
                     new FormatArg("%status%", status),
                     new FormatArg("%levelname%", petStats.getCurrentLevel().getLevelName()),
                     new FormatArg("%health%", currentHealthStr),
@@ -1561,12 +1559,12 @@ public class Pet {
         setPetStats();
 
         int inventorySize = 0;
-        if(petStats == null)
+        if (petStats == null)
             inventorySize = defaultInventorySize;
         else
             inventorySize = petStats.getExtendedInventorySize();
 
-        while(inventorySize%9 != 0)
+        while (inventorySize % 9 != 0)
             inventorySize++;
 
         return Math.min(54, inventorySize);
@@ -1575,7 +1573,7 @@ public class Pet {
     /**
      * Compare using mythicmobs name
      */
-    public boolean equals(Pet other) {
+    public boolean equals(final Pet other) {
         return this.id.equals(other.getId());
     }
 
